# wata-smart-tracker

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  api.py  config.py  database.py  main.py  models.py  schemas.py  security.py  utils.py
backend/app/services/: ai_fallback.py  ai_hybrid.py  education_filter.py  emailer.py  ocr.py  reminder_worker.py  telegram_bot.py  tracker.py  uploads.py
backend/backend/storage/uploads/submissions/87fe369f-d509-429a-a556-28f7feeeaa1c/: fc8fd1ab-9849-4cdc-8097-0c63a40fc336_pdf
backend/storage/uploads/assignments/1b7978c4-6a08-4663-86e9-06d2aa1fa8d3/: 35ec4af5-248d-4087-8f1c-efb959533657_card-2.txt
backend/wata_smart_tracker_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ARCHITECTURE.md  PROJECT_FILES_EXPLANATION.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/src/: App.tsx  api.ts  date.ts  labels.ts  styles.css  types.ts
frontend/src/components/: AiAssistantWidget.tsx  AuthPage.tsx  LandingPage.tsx  ParentDashboard.tsx  StudentDashboard.tsx  TeacherDashboard.tsx  ToastViewport.tsx
frontend/tests/e2e/: roles.spec.ts
scripts/: publish-site.sh  run-bot.sh  run-site.sh  setup-llama.sh  share-public.sh
