[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wata-smart-tracker-backend"
version = "0.1.0"
description = "Architecture starter for WATA smart tracker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "pillow>=10.3.0,<12.0.0",
  "pytesseract>=0.3.10,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
